--- a/web/elements/blocks/add_inport_box.html
+++ b/web/elements/blocks/add_inport_box.html
@@ -6,12 +6,13 @@
 <link rel="import" href="packages/paper_elements/paper_item.html" />
 <link rel="import" href="packages/core_elements/core_menu.html" />
 
-<polymer-element name="add-inport-box" attributes="command">
+<polymer-element name="add-inport-box">
     <template>
 
         <style>
             :host {
             }
+
             #container {
                 margin-top: 2px;
                 margin-left: 7px;
