--- a/web/elements/blocks/outport_buffer_box.html
+++ b/web/elements/blocks/outport_buffer_box.html
@@ -6,7 +6,7 @@
 <link rel="import" href="packages/paper_elements/paper_item.html" />
 <link rel="import" href="packages/core_elements/core_menu.html" />
 
-<polymer-element name="outport-buffer-box" attributes="value">
+<polymer-element name="outport-buffer-box">
 
     <template>
         <style type='text/css'>
