--- a/web/elements/collapse_menu.html
+++ b/web/elements/collapse_menu.html
@@ -4,7 +4,7 @@
 <link rel="import" href="packages/core_elements/core_menu.html" />
 <link rel="import" href="packages/core_elements/core_toolbar.html" />
 
-<polymer-element name="collapse-menu" attributes="state label toolbarOpenColor toolbarCloseColor">
+<polymer-element name="collapse-menu" attributes="state label toolbarOpenColor toolbarCloseColor toolbarOpenTextColor toolbarCloseTextColor toolbarDisabledColor toolbarDisabledTextColor">
     <template >
         <style type='text/css'>
 
