--- a/web/elements/main_frame.html
+++ b/web/elements/main_frame.html
@@ -7,6 +7,38 @@
 <link rel="import" href="packages/core_elements/core_toolbar.html" />
 <link rel="import" href="packages/core_elements/core_item.html" />
 <link rel="import" href="packages/paper_elements/paper_button.html" />
+<link rel="import" href="packages/core_elements/core_drawer_panel.html" />
+<link rel="import" href="packages/core_elements/core_header_panel.html" />
+
+
+<link rel="import" href="blocks/add_inport_box.html" />
+<link rel="import" href="blocks/add_outport_box.html" />
+<link rel="import" href="blocks/declare_variable_box.html" />
+<link rel="import" href="blocks/set_variable.html" />
+<link rel="import" href="blocks/read_inport_box.html" />
+<link rel="import" href="blocks/write_outport_box.html" />
+<link rel="import" href="blocks/inport_buffer_box.html" />
+<link rel="import" href="blocks/outport_buffer_box.html" />
+<link rel="import" href="blocks/integer_literal_box.html" />
+<link rel="import" href="blocks/real_literal_box.html" />
+<link rel="import" href="blocks/addition_box.html" />
+<link rel="import" href="blocks/subtraction_box.html" />
+<link rel="import" href="blocks/multiplication_box.html" />
+<link rel="import" href="blocks/division_box.html" />
+<link rel="import" href="blocks/if_box.html" />
+<link rel="import" href="blocks/else_box.html" />
+<link rel="import" href="blocks/while_box.html" />
+<link rel="import" href="blocks/assign_variable_box.html" />
+<link rel="import" href="blocks/refer_variable_box.html" />
+<link rel="import" href="blocks/equals_box.html" />
+<link rel="import" href="blocks/notequals_box.html" />
+<link rel="import" href="blocks/larger_than_box.html" />
+<link rel="import" href="blocks/larger_than_or_equals_box.html" />
+<link rel="import" href="blocks/smaller_than_box.html" />
+<link rel="import" href="blocks/smaller_than_or_equals_box.html" />
+<link rel="import" href="blocks/logical_not_box.html" />
+
+
 
 <link rel="import" href="collapse_menu.html"/>
 <link rel="import" href="add_element_button.html" />
@@ -14,6 +46,8 @@
 <link rel="import" href="editor_panel.html" />
 <link rel="import" href="result_panel.html" />
 <link rel="import" href="python_panel.html" />
+
+
 
 <polymer-element name="main-frame">
     <template >
