--- a/web/elements/blocks/add_outport_box.html
+++ b/web/elements/blocks/add_outport_box.html
@@ -1,4 +1,4 @@
-<link rel="import" href="packages/polymer/polymer.html" />
+<link rel="import" href="../packages/polymer/polymer.html" />
 <link rel="import" href="packages/core_elements/core_style.html" />
 <link rel="import" href="packages/paper_elements/paper_input.html" />
 <link rel="import" href="packages/paper_elements/paper_dropdown.html" />
@@ -6,7 +6,7 @@
 <link rel="import" href="packages/paper_elements/paper_item.html" />
 <link rel="import" href="packages/core_elements/core_menu.html" />
 
-<polymer-element name="add-outport-box" attributes="command">
+<polymer-element name="add-outport-box">
     <template>
 
         <style>
