--- a/web/elements/blocks/addition_box.html
+++ b/web/elements/blocks/addition_box.html
@@ -1,9 +1,12 @@
-<link rel="import" href="packages/polymer/polymer.html" />
-<link rel="import" href="packages/core_elements/core_style.html" />
-<link rel="import" href="packages/paper_elements/paper_input.html" />
-<link rel="import" href="packages/paper_elements/paper_fab.html" />
 
-<polymer-element name="addition-box" attributes="value">
+
+
+<link rel="import" href="packages/polymer/polymer.html" />
+<!-- <link rel="import" href="packages/core_elements/core_style.html" />
+<link rel="import" href="packages/paper_elements/paper_input.html" />
+<link rel="import" href="packages/paper_elements/paper_fab.html" /> -->
+
+<polymer-element name="addition-box">
     <template>
 
         <style type='text/css'>
