--- a/web/elements/blocks/assign_variable_box.html
+++ b/web/elements/blocks/assign_variable_box.html
@@ -2,7 +2,7 @@
 <link rel="import" href="packages/core_elements/core_style.html" />
 <link rel="import" href="packages/paper_elements/paper_input.html" />
 
-<polymer-element name="assign-variable-box" attributes="command">
+<polymer-element name="assign-variable-box">
     <template>
 
         <style type='text/css'>
