--- a/web/elements/blocks/declare_variable_box.html
+++ b/web/elements/blocks/declare_variable_box.html
@@ -6,7 +6,7 @@
 <link rel="import" href="packages/paper_elements/paper_item.html" />
 <link rel="import" href="packages/core_elements/core_menu.html" />
 
-<polymer-element name="declare-variable-box" attributes="command">
+<polymer-element name="declare-variable-box">
     <template>
 
         <style type='text/css'>
@@ -41,7 +41,7 @@
         <!--Japanese ver.-->
         <div id="container" horizontal layout center on-tap="{{onClicked}}">
             <div end>変数 (名称: </div>
-            <paper-input id="name-input" one value="{{name}}"></paper-input>
+            <paper-input id="name-input" one value="{{varname}}"></paper-input>
             <div end>, データタイプ: </div>
             <!-- <paper-input id="type-input" flex one value="{{port_type}}"></paper-input> -->
             <paper-dropdown-menu id="dropdown-menu" label="Your favorite pastry">
