--- a/web/elements/blocks/if_box.html
+++ b/web/elements/blocks/if_box.html
@@ -1,7 +1,7 @@
 <link rel="import" href="packages/polymer/polymer.html" />
 <link rel="import" href="packages/core_elements/core_style.html" />
 
-<polymer-element name="if-box" attributes="command">
+<polymer-element name="if-box">
     <template>
 
         <style type='text/css'>
