--- a/web/elements/blocks/read_inport_box.html
+++ b/web/elements/blocks/read_inport_box.html
@@ -2,7 +2,7 @@
 <link rel="import" href="packages/core_elements/core_style.html" />
 <link rel="import" href="packages/paper_elements/paper_input.html" />
 
-<polymer-element name="read-inport-box" attributes="command">
+<polymer-element name="read-inport-box">
     <template>
 
         <style>
