--- a/web/elements/blocks/smaller_than_box.html
+++ b/web/elements/blocks/smaller_than_box.html
@@ -2,7 +2,7 @@
 <link rel="import" href="packages/core_elements/core_style.html" />
 <link rel="import" href="packages/paper_elements/paper_fab.html" />
 
-<polymer-element name="smaller-than-box" attributes="value">
+<polymer-element name="smaller-than-box">
     <template>
 
         <style type='text/css'>
