--- a/web/elements/blocks/subtraction_box.html
+++ b/web/elements/blocks/subtraction_box.html
@@ -3,7 +3,7 @@
 <link rel="import" href="packages/paper_elements/paper_input.html" />
 <link rel="import" href="packages/paper_elements/paper_fab.html" />
 
-<polymer-element name="subtraction-box" attributes="value">
+<polymer-element name="subtraction-box">
     <template>
 
         <style type='text/css'>
