--- a/web/elements/result_panel.html
+++ b/web/elements/result_panel.html
@@ -7,13 +7,13 @@
             :host {
             }
             #target {
-                height: 300px;
+                height: 0px;
             }
         </style>
-
+<!--
         <div id="target">
             Here Result messages are displayed.
-        </div>
+        </div> -->
     </template>
     <script type="application/dart" src="result_panel.dart"></script>
 </polymer-element>
