--- a/web/index.html
+++ b/web/index.html
@@ -1,24 +1,24 @@
+
 <!DOCTYPE html>
-
 <html>
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="import" href="packages/polymer/polymer.html">
+    <head>
+        <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+        <script src="packages/web_components/webcomponents-lite.min.js"></script>
+        <style>
+            * {
+                margin: 0px;
+                padding: 0px;
+            }
+        </style>
+        <title>RTC Box Coding 0.2.0</title>
+    </head>
 
-    <link rel="import" href="elements/main_frame.html">
+    <body unresolved>
+        <main-frame fit></main-frame>
 
-    <!-- <script src="packages/web_components/webcomponents-lite.min.js"></script> -->
-    <!-- <script src="packages/web_components/dart_support.js"></script>
-    <script src="packages/bower_components -->
-    <title>RTC Box Coding 0.0.5</title>
-</head>
-
-<body fullbreed>
-    <main-frame fit></main-frame>
-
-    <!-- <script type="application/dart" src="index.dart"></script> -->
-    <!-- <script src="packages/browser/dart.js"></script> -->
-    <script type="application/dart">export 'package:polymer/init.dart';</script>
-</body>
+        <script type="application/dart" src="index.dart"></script>
+        <script src="packages/browser/dart.js"></script>
+    </body>
 </html>
+
