--- a/web/main_menu/block_editor.html
+++ b/web/main_menu/block_editor.html
@@ -57,7 +57,11 @@
                 display: none;
                 color: #727272;
                 background-color: #A1CF6B;
-                /*background-color: #FF5722;*/
+            }
+
+            #block-container {
+                height: 100px;
+                overflow: scroll;
             }
 
         </style>
