--- a/web/main_menu/block_editor.html
+++ b/web/main_menu/block_editor.html
@@ -3,14 +3,16 @@
 
 <link rel="import" href="boxes/add_inport_box.html" />
 <link rel="import" href="boxes/add_outport_box.html" />
+<link rel="import" href="boxes/declare_variable_box.html" />
+<link rel="import" href="boxes/assign_box.html" />
+<link rel="import" href="boxes/refer_variable_box.html" />
+<link rel="import" href="boxes/integer_literal_box.html" />
 <!--
-<link rel="import" href="../elements/blocks/declare_variable_box.html" />
 <link rel="import" href="../elements/blocks/set_variable.html" />
 <link rel="import" href="../elements/blocks/read_inport_box.html" />
 <link rel="import" href="../elements/blocks/write_outport_box.html" />
 <link rel="import" href="../elements/blocks/inport_buffer_box.html" />
 <link rel="import" href="../elements/blocks/outport_buffer_box.html" />
-<link rel="import" href="../elements/blocks/integer_literal_box.html" />
 <link rel="import" href="../elements/blocks/real_literal_box.html" />
 <link rel="import" href="../elements/blocks/addition_box.html" />
 <link rel="import" href="../elements/blocks/subtraction_box.html" />
@@ -19,8 +21,6 @@
 <link rel="import" href="../elements/blocks/if_box.html" />
 <link rel="import" href="../elements/blocks/else_box.html" />
 <link rel="import" href="../elements/blocks/while_box.html" />
-<link rel="import" href="../elements/blocks/assign_variable_box.html" />
-<link rel="import" href="../elements/blocks/refer_variable_box.html" />
 <link rel="import" href="../elements/blocks/equals_box.html" />
 <link rel="import" href="../elements/blocks/notequals_box.html" />
 <link rel="import" href="../elements/blocks/larger_than_box.html" />
