--- a/web/left_menu/add_element_button.html
+++ b/web/left_menu/add_element_button.html
@@ -1,14 +1,19 @@
 <link rel="import" href="packages/polymer_elements/paper_button.html" />
 <link rel="import" href="packages/polymer_elements/iron_icons.html" />
-
+<link rel="import" href="../material_style.html" />
 <dom-module id="add-element-button" attributes="label command">
     <template >
         <style type='text/css'>
 
+            #main-button {
+                background-color: var(--light-primary-color);
+                margin-bottom: 3px;
+            }
+
         </style>
 
         <div class="layout horizontal">
-            <paper-button id="main-button" on-tap="onTap" class="flex layout">
+            <paper-button id="main-button" on-tap="onTap" class="flex horizontal layout">
                 <iron-icon id="addIcon" icon="add" self-start></iron-icon>
                 <div class="flex self-center horizontal center-justified layout" >{{label}}</div>
             </paper-button>
