--- a/web/main_frame.html
+++ b/web/main_frame.html
@@ -30,7 +30,7 @@
 <link rel="import" href="blocks/if_box.html" />
 <link rel="import" href="blocks/else_box.html" />
 <link rel="import" href="blocks/while_box.html" />
-<link rel="import" href="blocks/assign_variable_box.html" />
+<link rel="import" href="blocks/assign_box.html" />
 <link rel="import" href="blocks/refer_variable_box.html" />
 <link rel="import" href="blocks/equals_box.html" />
 <link rel="import" href="blocks/notequals_box.html" />
