--- a/web/main_menu/boxes/assign_box.html
+++ b/web/main_menu/boxes/assign_box.html
@@ -1,13 +1,12 @@
-<link rel="import" href="packages/polymer/polymer.html" />
-<link rel="import" href="packages/core_elements/core_style.html" />
-<link rel="import" href="packages/paper_elements/paper_input.html" />
+<link rel="import" href="packages/polymer_elements/paper_input.html" />
 
-<polymer-element name="assign-variable-box">
+<dom-module id="assign-box">
     <template>
 
         <style type='text/css'>
             :host {
             }
+
             #container {
                 margin-top: 2px;
                 margin-left: 7px;
@@ -30,13 +29,13 @@
         </style>
 
         <!--Japanese ver.-->
-        <div id="container" horizontal layout center wrap on-tap="{{onClicked}}">
-            <div id="left-content" horizontal layout center></div>
-            <div self-center layout end>に、</div>
-            <div id="right-content" horizontal layout center></div>
-            <div self-center layout end>を代入する</div>
+        <div id="container" class="horizontal layout center wrap" on-tap="onClicked">
+            <div id="left-content" class="horizontal layout center"></div>
+            <div class="self-center layout" end>に、</div>
+            <div id="right-content" class="horizontal layout center"></div>
+            <div class="self-center layout" end>を代入する</div>
         </div>
 
     </template>
-    <script type="application/dart" src="assign_variable_box.dart"></script>
-</polymer-element>
+    <script type="application/dart" src="assign_box.dart"></script>
+</dom-module>
