--- a/web/main_menu/boxes/declare_variable_box.html
+++ b/web/main_menu/boxes/declare_variable_box.html
@@ -1,12 +1,10 @@
 <link rel="import" href="packages/polymer/polymer.html" />
-<link rel="import" href="packages/core_elements/core_style.html" />
-<link rel="import" href="packages/paper_elements/paper_input.html" />
-<link rel="import" href="packages/paper_elements/paper_dropdown.html" />
-<link rel="import" href="packages/paper_elements/paper_dropdown_menu.html" />
-<link rel="import" href="packages/paper_elements/paper_item.html" />
-<link rel="import" href="packages/core_elements/core_menu.html" />
+<link rel="import" href="packages/polymer_elements/paper_input.html" />
+<link rel="import" href="packages/polymer_elements/paper_dropdown_menu.html" />
+<link rel="import" href="packages/polymer_elements/paper_item.html" />
+<link rel="import" href="packages/polymer_elements/iron_selector.html" />
 
-<polymer-element name="declare-variable-box">
+<dom-module id="declare-variable-box">
     <template>
 
         <style type='text/css'>
@@ -39,19 +37,18 @@
         </style>
 
         <!--Japanese ver.-->
-        <div id="container" horizontal layout center on-tap="{{onClicked}}">
+        <div id="container" class="horizontal layout center" on-tap="onClicked">
             <div end>変数 (名称: </div>
-            <paper-input id="name-input" one value="{{varname}}"></paper-input>
+            <paper-input id="name-input" one value="{{varname}}" on-input="onInputName"></paper-input>
             <div end>, データタイプ: </div>
             <!-- <paper-input id="type-input" flex one value="{{port_type}}"></paper-input> -->
-            <paper-dropdown-menu id="dropdown-menu" label="Your favorite pastry">
-                <paper-dropdown id="dropdown" class="dropdown">
-                    <core-menu class="menu" id="menu-content"></core-menu>
-                </paper-dropdown>
+            <paper-dropdown-menu id="dropdown-menu" label="Primitive Data Type">
+                <iron-selector attr-for-selected="value" id="dropdown" class="dropdown-content">
+                </iron-selector>
             </paper-dropdown-menu>
             <div end>)</div>
         </div>
 
     </template>
     <script type="application/dart" src="declare_variable_box.dart"></script>
-</polymer-element>
+</dom-module>
