--- a/web/main_menu/block_editor.html
+++ b/web/main_menu/block_editor.html
@@ -7,6 +7,9 @@
 <link rel="import" href="boxes/variables/assign_box.html" />
 <link rel="import" href="boxes/variables/refer_variable_box.html" />
 <link rel="import" href="boxes/integer_literal_box.html" />
+
+<link rel="import" href="boxes/dataports/read_inport_box.html" />
+
 <!--
 <link rel="import" href="../elements/blocks/set_variable.html" />
 <link rel="import" href="../elements/blocks/read_inport_box.html" />
