--- a/web/left_menu/left_menu.html
+++ b/web/left_menu/left_menu.html
@@ -32,7 +32,11 @@
           <add-element-button id="data3" label="出力ポートのデータ" command="OutPortBuffer"></add-element-button>
           <add-element-button id="data4" label="出力ポートに書き込み" command="WriteOutPort"></add-element-button>
       </collapse-menu>
-
+      <collapse-menu id="if_switch_loop_menu" label="制御文" state="closed">
+          <add-element-button id="loop1" label="もし---なら" command="If"></add-element-button>
+          <add-element-button id="loop2" label="そうでないなら" command="else"></add-element-button>
+          <add-element-button id="loop3" label="---の間、ずっと" command="while"></add-element-button>
+      </collapse-menu>
       <!--
                 <core-toolbar class="dark-primary-color text-primary-color"></core-toolbar>
 
