--- a/web/main_frame.html
+++ b/web/main_frame.html
@@ -21,7 +21,7 @@
 <link rel="import" href="blocks/write_outport_box.html" />
 <link rel="import" href="blocks/inport_buffer_box.html" />
 <link rel="import" href="blocks/outport_buffer_box.html" />
-<link rel="import" href="blocks/integer_literal_box.html" />
+<link rel="import" href="blocks/true_literal_box.html" />
 <link rel="import" href="blocks/real_literal_box.html" />
 <link rel="import" href="blocks/addition_box.html" />
 <link rel="import" href="blocks/subtraction_box.html" />
