--- a/web/main_menu/block_editor.html
+++ b/web/main_menu/block_editor.html
@@ -7,8 +7,10 @@
 <link rel="import" href="boxes/variables/assign_box.html" />
 <link rel="import" href="boxes/variables/refer_variable_box.html" />
 <link rel="import" href="boxes/integer_literal_box.html" />
+<link rel="import" href="boxes/true_literal_box.html" />
 
 <link rel="import" href="boxes/dataports/read_inport_box.html" />
+<link rel="import" href="boxes/flow_control/if_box.html" />
 
 <!--
 <link rel="import" href="../elements/blocks/set_variable.html" />
