--- a/web/main_menu/block_editor.html
+++ b/web/main_menu/block_editor.html
@@ -10,6 +10,8 @@
 <link rel="import" href="boxes/true_literal_box.html" />
 
 <link rel="import" href="boxes/dataports/read_inport_box.html" />
+<link rel="import" href="boxes/dataports/is_new_inport_box.html" />
+
 <link rel="import" href="boxes/flow_control/if_box.html" />
 
 <!--
