--- a/web/main_menu/boxes/dataports/is_new_inport_box.html
+++ b/web/main_menu/boxes/dataports/is_new_inport_box.html
@@ -1,6 +1,6 @@
 <link rel="import" href="packages/polymer_elements/paper_input.html" />
 <link rel="import" href="packages/polymer_elements/iron_selector.html" />
-<dom-module id="read-inport-box">
+<dom-module id="is-new-inport-box">
     <template>
 
         <style>
@@ -54,8 +54,8 @@
                 <iron-selector attr-for-selected="value" id="dropdown" class="dropdown-content">
                 </iron-selector>
             </paper-dropdown-menu>
-            <div end>) のデータを読み込む</div>
+            <div end>) の受信データがある</div>
         </div>
     </template>
-    <script type="application/dart" src="read_inport_box.dart"></script>
+    <script type="application/dart" src="is_new_inport_box.dart"></script>
 </dom-module>
