--- a/web/main_menu/boxes/rtm/add_inport_box.html
+++ b/web/main_menu/boxes/rtm/add_inport_box.html
@@ -28,16 +28,18 @@
             }
 
             :host > div > paper-input#name-input {
-                width: 50px;
-                min-width: 50px;
+                width: 70px;
+                min-width: 70px;
+                --paper-input-container-input-color: black;
+                --paper-input-container-color: black;
             }
         </style>
 
         <!--Japanese ver.-->
         <div id="container" class="horizontal layout center" on-tap="onClicked">
-            <div end>入力ポート (名称: </div>
-            <paper-input id="name-input" one value="{{port_name}}" on-input="onNameChanged"></paper-input>
-            <div end>, データタイプ: </div>
+            <div end>入力ポート (</div>
+            <paper-input id="name-input" one value="{{port_name}}" label="ポート名" on-input="onNameChanged"></paper-input>
+            <div end>:</div>
             <data-type-dropdown id="datatype-dropdown"></data-type-dropdown>
             <div end>)</div>
         </div>
