--- a/web/main_menu/boxes/dataports/is_new_inport_box.html
+++ b/web/main_menu/boxes/dataports/is_new_inport_box.html
@@ -51,9 +51,8 @@
 
         <!--Japanese ver.-->
         <div id="container" class="horizontal layout center" on-tap="onClicked">
-            <div end>入力ポート (</div>
-            <port-selector id="port-selector"></port-selector>
-            <div end>) の受信データがある</div>
+            <port-selector id="port-selector" label="入力ポート"></port-selector>
+            <div end> の受信データがある</div>
         </div>
     </template>
     <script type="application/dart" src="is_new_inport_box.dart"></script>
