--- a/web/main_menu/boxes/dataports/outport_buffer_box.html
+++ b/web/main_menu/boxes/dataports/outport_buffer_box.html
@@ -35,8 +35,7 @@
 
         <!--Japanese ver.-->
         <div id="container" class="horizontal layout center" on-tap="onClicked">
-            <div end>出力ポート </div>
-            <typed-data-selector id="data-selector"></typed-data-selector>
+            <typed-data-selector id="data-selector" label="出力ポート"></typed-data-selector>
         </div>
 
     </template>
