--- a/web/main_menu/block_editor.html
+++ b/web/main_menu/block_editor.html
@@ -3,15 +3,18 @@
 
 <link rel="import" href="boxes/rtm/add_inport_box.html" />
 <link rel="import" href="boxes/rtm/add_outport_box.html" />
+
 <link rel="import" href="boxes/variables/declare_variable_box.html" />
 <link rel="import" href="boxes/variables/assign_box.html" />
 <link rel="import" href="boxes/variables/refer_variable_box.html" />
+
 <link rel="import" href="boxes/literal/integer_literal_box.html" />
 <link rel="import" href="boxes/literal/true_literal_box.html" />
 
 <link rel="import" href="boxes/dataports/read_inport_box.html" />
 <link rel="import" href="boxes/dataports/is_new_inport_box.html" />
 <link rel="import" href="boxes/dataports/outport_buffer_box.html" />
+<link rel="import" href="boxes/dataports/inport_buffer_box.html" />
 <link rel="import" href="boxes/dataports/write_outport_box.html" />
 
 <link rel="import" href="boxes/flow_control/if_box.html" />
