--- a/web/main_menu/boxes/dataports/inport_buffer_box.html
+++ b/web/main_menu/boxes/dataports/inport_buffer_box.html
@@ -1,12 +1,6 @@
-<link rel="import" href="packages/polymer/polymer.html" />
-<link rel="import" href="packages/core_elements/core_style.html" />
-<link rel="import" href="packages/paper_elements/paper_input.html" />
-<link rel="import" href="packages/paper_elements/paper_dropdown.html" />
-<link rel="import" href="packages/paper_elements/paper_dropdown_menu.html" />
-<link rel="import" href="packages/paper_elements/paper_item.html" />
-<link rel="import" href="packages/core_elements/core_menu.html" />
+<link rel="import" href="data_port_box.html" />
 
-<polymer-element name="inport-buffer-box">
+<dom-module id="inport-buffer-box">
 
     <template>
         <style type='text/css'>
@@ -29,50 +23,14 @@
 
                 height: 45px;
             }
-            paper-input {
-                margin-left : 10px;
-                margin-right: 10px;
-            }
-            :host paper-dropdown-menu#name-dropdown-menu {
-                margin: 0px;
-                padding: 0px;
-            }
-            :host paper-dropdown-menu#dropdown-menu{
-                margin: 0px;
-                padding: 0px;
-            }
-            :host #inport-decorator {
-                font-size: 12px;
-            }
-            :host paper-input#index-input {
-                min-width: 10px;
-                width: 10px;
-            }
+
+
         </style>
 
         <!--Japanese ver.-->
-        <div id="container">
-            <div id="title-area" vertical layout center on-tap="{{onClicked}}">
-                <div self-start layout id="inport-decorator">入力ポート </div>
-                <div horizontal layout center>
-                    <paper-dropdown-menu id="name-dropdown-menu" label="Your favorite pastry">
-                        <paper-dropdown id="name-dropdown" class="dropdown">
-                            <core-menu class="menu" id="name-menu-content"></core-menu>
-                        </paper-dropdown>
-                    </paper-dropdown-menu>
-                    <paper-dropdown-menu id="dropdown-menu" label="Your favorite pastry">
-                        <paper-dropdown id="dropdown" class="dropdown">
-                            <core-menu class="menu" id="menu-content"></core-menu>
-                        </paper-dropdown>
-                    </paper-dropdown-menu>
-                    <div id="index-left">[</div>
-                    <paper-input id="index-input" value="{{indexInputValue}}"></paper-input>
-                    <div id="index-right">]</div>
-                </div>
-            </div>
+        <div id="container" class="horizontal layout center" on-tap="onClicked">
+            <typed-data-selector id="data-selector" label="入力ポート"></typed-data-selector>
         </div>
-
-
     </template>
     <script type="application/dart" src="inport_buffer_box.dart"></script>
-</polymer-element>
+</dom-module>
