variable reference added.

--- a/web/main_menu/boxes/dataports/data_port_box.html
+++ b/web/main_menu/boxes/dataports/data_port_box.html
@@ -37,7 +37,8 @@
                 --paper-input-container-label-floating: true;
             }
 
-            :host > div > paper-dropdown-menu {
+            :host #access-dropdown-menu {
+                width: 120px;
                 min-width: 120px;
             }
 
